--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
     "deploy": "script/deploy",
-    "lint": "eslint ./ --ignore-path .gitignore",
+    "lint": "eslint ./ --ignore-path .gitignore paper-full.js",
     "lint-fix": "npm run lint -- --fix",
     "precommit": "lint-staged",
     "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
@@ -24,7 +24,6 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "prettier --write",
-      "npm run lint-fix",
       "git add"
     ],
     "*.{css,scss,json,md}": [
