--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "babel": "^6.23.0",
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "history": "^4.6.3",
@@ -61,7 +62,7 @@
     "babel-loader": "^8.0.0-beta.2",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.1",
-    "mocha": "^3.3.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.12.1",
     "prettier": "1.11.1",
     "webpack": "^4.0.1",
