--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.81.1",
     "tone": "^0.12.80"
   },
   "devDependencies": {
